[Add] Slugify URLs
Slugify means that instead of using the ID of an object in its URL we
use a URL-friendly version of the objects name to make the objects URL

--- a/global_change_lab/templates/partials/fat_footer.html
+++ b/global_change_lab/templates/partials/fat_footer.html
@@ -13,7 +13,7 @@
           <br>
           <a href="{{ project.get_absolute_url }}">{{ project.name }}</a>
           in the bit
-          <a href="{% url 'skills:trainingbit_cover' project.trainingbit.pk %}">{{ project.trainingbit.name }}</a>
+          <a href="{{ project.trainingbit.get_absolute_url }}">{{ project.trainingbit.name }}</a>
         </div>
       </div>
       {% endfor %}
