--- a/skills/templates/skills/skill_edit.html
+++ b/skills/templates/skills/skill_edit.html
@@ -12,7 +12,7 @@
 <div class="page-buttons">
   {# View trainingbit button #}
   {% if skill %}
-    <a href="{% url 'skills:skill_view' skill.id %}" class="button success">View skill</a>
+    <a href="{{ skill.get_absolute_url }}" class="button success">View skill</a>
   {% endif %}
 </div>
 
