--- a/global_change_lab/templates/user_progress.html
+++ b/global_change_lab/templates/user_progress.html
@@ -8,7 +8,7 @@
 <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4 xlarge-block-grid-6">
 {% for skill in request.user.skills_in_progress.all %}
   <li>
-   <a href="{% url 'skills:skill_view' skill.id %}">
+   <a href="{{ skill.get_absolute_url }}">
    <div class="image">
      <img src="{{ skill.image.url }}">
    </div>
