--- a/skills/templates/skills/partials/skill_list_small.html
+++ b/skills/templates/skills/partials/skill_list_small.html
@@ -2,7 +2,7 @@
 
 <div class="skill-list-small">
 {% for skill in skills %}
-  <a href="{% url 'skills:skill_view' skill.id %}">
+  <a href="{{ skill.get_absolute_url }}">
   <div class="row">
     <div class="image-column">
       {% if skill in request.user.skills_completed.all %}
