[Fix] new_user_input_details: Terms of service link broken

--- a/global_change_lab/templates/new_user_input_details.html
+++ b/global_change_lab/templates/new_user_input_details.html
@@ -25,7 +25,7 @@
         personal information to third parties. If you want to read more
         <a href="{% url 'about' %}">about this site</a>
         or to the terms of service please find them
-        <a href="{% url 'terms_of_service' %}">here</a>
+        <a href="{% url 'terms' %}">here</a>
       </p>
       <p>Thank<!--s--> you ;-)</p>
     </div>
