[Design&Add] .notice class

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -202,6 +202,13 @@ h1, h2, h3, h4, h5, h6 {
 .bold {
   font-weight: bold;
 }
+.notice {
+  color: lighten($gcl-midgray, 20%);
+  font-size: rem-calc(12px);
+}
+a.notice:hover {
+  color: $gcl-red;
+}
 
 $medium-up: "#{$screen} and (min-width:#{lower-bound($medium-range)})";
 
