[Move] `$metadata_height` from app.scss to _settings.scss

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -22,6 +22,8 @@ $page-buttons-overlay: absolute;
 
 $button-font-size: rem-calc(12px);
 
+$metadata_height: rem-calc(38px);
+
 %stencil-font {
   font-family: 'Allerta Stencil', sans-serif;
 }
