[Add] Admin page for flagged comments

--- a/global_change_lab/templates/admin_dashboard.html
+++ b/global_change_lab/templates/admin_dashboard.html
@@ -14,6 +14,15 @@
 <div id="admin-dashboard">
   <h1>Administrator Dashboard</h1>
   <hr>
+  <section id="utilties">
+    <div class="row">
+      <div class="large-6 columns">
+        <h6>Comments</h6>
+        <a href="{% url 'admin_dashboard_flagged_comments' %}">View flagged comments</a>
+      </div>
+    </div>
+  </section>
+  <hr>
   <section id="statistics">
     <div class="row">
       <div class="large-6 columns">
