--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -28,7 +28,11 @@
 
   {% block scripts %}
   {% endblock %}
-  <link rel="stylesheet" href="{% static 'global_change_lab/css/app.css' %}" />
+  <link rel="stylesheet" href="{% static 'global_change_lab/css/app.css' %}">
+  <!--[if ie 9]>
+  <link rel="stylesheet" href="{% static 'global_change_lab/css/ie9.css' %}">
+  <![endif]-->
+
   <title>{% block title %}Global Change Lab{% endblock %}</title>
 </head>
 
